k8s/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pangpuncake/cs3219_a1.1
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
