k8s/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: fe-http-svc
      protocol: TCP
      port: 3000
      targetPort: http
